refactor: simplify physical-tenant init merge
Collapse three near-identical appendDistinct* methods into one generic
helper, switch dedup lookup from List.contains to Set, drop dead
null-guards on eagerly-initialized collections, and split validation
from merging so a failing tenant can't leave a partial merge behind.
Flag the merge step as transitional scaffolding for the per-PT storage
cutover.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>